# moore-codex

./: README.md
codex-rs/: Cargo.toml
codex-rs/cli/src/: login.rs
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/core/: Cargo.toml
codex-rs/core/src/: model_provider_info.rs
codex-rs/feedback/: Cargo.toml
codex-rs/feedback/src/: lib.rs
codex-rs/lmstudio/: Cargo.toml
codex-rs/otel/: Cargo.toml
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: updates.rs
codex-rs/tui/src/onboarding/: auth.rs
scripts/: build-codex-rocky8.sh
