[package]
edition.workspace = true
name = "codex-feedback"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
codex-protocol = { workspace = true }
# Note: this fork drops the Sentry dependency so no HTTP uploads occur; feedback is local-only.
tracing-subscriber = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
