[package]
edition.workspace = true
name = "codex-lmstudio"
version.workspace = true

[lib]
name = "codex_lmstudio"
path = "src/lib.rs"


[dependencies]
codex-core = { path = "../core" }
# Explicitly use Rustls-only reqwest to avoid pulling in native-tls/OpenSSL in this fork.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls", # rustls is used instead of native-tls/OpenSSL
] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
tracing = { version = "0.1.41", features = ["log"] }
which = "6.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"

[lints]
workspace = true
